--- a/IngresoPedidos/Views/MainWindow.xaml
+++ b/IngresoPedidos/Views/MainWindow.xaml
@@ -3,15 +3,15 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:vm="clr-namespace:IngresoPedidos.ViewModels"
+        xmlns:viewModels="clr-namespace:IngresoPedidos.ViewModels"
         mc:Ignorable="d"
         Title="Ingreso de Pedidos" Height="640" Width="800" WindowStartupLocation="CenterScreen" WindowState="Maximized">
-    <!--<Window.DataContext>
-        <vm:MainViewModel/>
-    </Window.DataContext>-->
+    <Window.Resources>
+        <viewModels:MainViewModel x:Key="ViewModel" />
+    </Window.Resources>
 
-    <Grid>
-        <Button Content="-712- SCHNEIDER NICOLAS" Margin="10,10,0,0" VerticalAlignment="Top" Padding="5,0,5,1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="22" BorderBrush="#FF707070" BorderThickness="1" FontSize="10" Background="#FFDDDDDD" Foreground="Black" HorizontalAlignment="Left" Width="244">
+    <Grid DataContext="{Binding Source={StaticResource ViewModel}}">
+        <Button Content="-712- SCHNEIDER NICOLAS" Margin="10,10,0,0" Command="{Binding ShowUserMenuCommand}" VerticalAlignment="Top" Padding="5,0,5,1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="22" BorderBrush="#FF707070" BorderThickness="1" FontSize="10" Background="#FFDDDDDD" Foreground="Black" HorizontalAlignment="Left" Width="244">
             <Button.ContextMenu>
                 <ContextMenu >
                     <MenuItem Header="Cambiar contraseña">
