--- a/IngresoPedidos/Views/MainWindow.xaml
+++ b/IngresoPedidos/Views/MainWindow.xaml
@@ -37,7 +37,7 @@
         </Button>
         <!---->
         <Label Content="Pedido" HorizontalAlignment="Left" Margin="10,37,0,0" VerticalAlignment="Top" Height="23" Width="94" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="109,37,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="145" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontWeight="Bold" TabIndex="1"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="109,37,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="145" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontWeight="Bold" TabIndex="1" FontSize="14"/>
         <Label Content="Articulo" HorizontalAlignment="Left" Margin="10,65,0,0" VerticalAlignment="Top" Height="23" Width="94" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
         <TextBox HorizontalAlignment="Left" Height="23" Margin="109,65,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="145" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" TabIndex="2"/>
         <Label Content="Modelo" HorizontalAlignment="Left" Margin="10,94,0,0" VerticalAlignment="Top" Height="22" Width="94" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
@@ -55,18 +55,18 @@
         <TextBox HorizontalAlignment="Left" Height="72" Margin="10,283,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="244" MaxLength="120" MaxLines="2" TabIndex="10" IsEnabled="False"/>
         <!---->
         <Label Content="PEDIDOS INGRESADOS EL ULTIMO MES" Margin="259,10,160,0" VerticalAlignment="Top" Padding="5,0,5,1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="22" BorderBrush="#FF707070" BorderThickness="1" FontSize="10" Background="{DynamicResource {x:Static SystemColors.GradientInactiveCaptionBrushKey}}"/>
-        <DataGrid Name="DataGridPedidos" ItemsSource="{Binding ListaPedidos}" SelectedItem="{Binding SelectedPedido}" Margin="259,37,10,10" ColumnWidth="*" AutoGenerateColumns="False" IsReadOnly="True" SelectionMode="Single" EnableRowVirtualization="True">
+        <DataGrid Name="DataGridPedidos" ItemsSource="{Binding PedidosViewList}"  EnableColumnVirtualization="True" CanUserAddRows="False" CanUserDeleteRows="False" CanUserReorderColumns="False" CanUserResizeColumns="False" CanUserResizeRows="False" CanUserSortColumns="False" Margin="259,37,10,10" ColumnWidth="*" AutoGenerateColumns="False" IsReadOnly="True" SelectionMode="Single" EnableRowVirtualization="True" FontFamily="Consolas" FontWeight="Bold" FontSize="14">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Pedido" />
-                <DataGridTextColumn Header="Modelo"/>
-                <DataGridTextColumn Header="Producto"/>
-                <DataGridTextColumn Header="Articulo"/>
-                <DataGridTextColumn Header="Cantidad"/>
-                <DataGridTextColumn Header="Ingreso"/>
-                <DataGridTextColumn Header="Estado"/>
-                <DataGridTextColumn Header="Fecha Estado"/>
-                <DataGridTextColumn Header="Reproceso"/>
-                <DataGridTemplateColumn>
+                <DataGridTextColumn Header="Pedido" Binding="{Binding NumeroPedido}" />
+                <DataGridTextColumn Header="Modelo" Binding="{Binding NombreModelo}"/>
+                <DataGridTextColumn Header="Producto" Binding="{Binding NombreProducto}"/>
+                <DataGridTextColumn Header="Articulo" Binding="{Binding Articulo}"/>
+                <DataGridTextColumn Header="Cantidad" Binding="{Binding CantidadEquipos}"/>
+                <DataGridTextColumn Header="Ingreso" Binding="{Binding FechaIngreso}"/>
+                <DataGridTextColumn Header="Estado" Binding="{Binding EstadoPedido}"/>
+                <DataGridTextColumn Header="Fecha Estado" Binding="{Binding FechaEstado}"/>
+                <DataGridTextColumn Header="Reproceso" Binding="{Binding NumeroReproceso}"/>
+                <!--<DataGridTemplateColumn>
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
@@ -74,13 +74,14 @@
                             </StackPanel>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
+                </DataGridTemplateColumn>-->
             </DataGrid.Columns>
         </DataGrid>
         <ComboBox Margin="0,10,10,0" VerticalAlignment="Top" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="6,3,5,3" HorizontalAlignment="Right" Width="145" TabIndex="14"/>
         <!---->
-        <Button Content="NUEVO" HorizontalAlignment="Left" Margin="10,414,0,0" Width="244" Height="22" VerticalAlignment="Top" TabIndex="13"/>
-        <Button Content="BUSCAR" HorizontalAlignment="Left" Margin="10,387,0,0" Width="244" Height="22" VerticalAlignment="Top" TabIndex="12"/>
         <Button Content="GUARDAR" HorizontalAlignment="Left" Margin="10,360,0,0" Width="244" Height="22" VerticalAlignment="Top" TabIndex="11"/>
+        <Button Content="BUSCAR" HorizontalAlignment="Left" Margin="10,387,0,0" Width="244" Height="22" VerticalAlignment="Top" TabIndex="12"/>
+        <Button Content="SEGUIMIENTO / DETALLES" HorizontalAlignment="Left" Margin="10,414,0,0" Width="244" Height="22" VerticalAlignment="Top" TabIndex="13"/>
+        <Button Content="NUEVO" HorizontalAlignment="Left" Margin="10,441,0,0" Width="244" Height="22" VerticalAlignment="Top" TabIndex="13"/>
     </Grid>
 </Window>
