--- a/IngresoPedidos/Views/MainWindow.xaml
+++ b/IngresoPedidos/Views/MainWindow.xaml
@@ -12,26 +12,25 @@
 
     <Grid DataContext="{Binding Source={StaticResource ViewModel}}">
         <!---->
-        <Label Content="Pedido" HorizontalAlignment="Left" Margin="10,37,0,0" VerticalAlignment="Top" Height="23" Width="94" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="109,37,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="145" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontWeight="Bold" TabIndex="1" FontSize="14"/>
-        <Label Content="Articulo" HorizontalAlignment="Left" Margin="10,65,0,0" VerticalAlignment="Top" Height="23" Width="94" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="109,65,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="145" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" TabIndex="2"/>
-        <Label Content="Modelo" HorizontalAlignment="Left" Margin="10,94,0,0" VerticalAlignment="Top" Height="22" Width="94" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-        <ComboBox HorizontalAlignment="Left" Margin="109,94,0,0" VerticalAlignment="Top" Width="145" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="6,3,5,3" TabIndex="3"/>
-        <Label Content="Producto" HorizontalAlignment="Left" Margin="10,121,0,0" VerticalAlignment="Top" Height="22" Width="94" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-        <ComboBox HorizontalAlignment="Left" Margin="109,121,0,0" VerticalAlignment="Top" Width="145" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="6,3,5,3" TabIndex="4"/>
-        <Label Content="Cantidad" HorizontalAlignment="Left" Margin="10,149,0,0" VerticalAlignment="Top" Height="23" Width="94" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="109,148,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="145" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" TabIndex="5"/>
-        <Label Content="Original" HorizontalAlignment="Left" Margin="10,177,0,0" VerticalAlignment="Top" Height="23" Padding="0" HorizontalContentAlignment="Center" Width="94" VerticalContentAlignment="Center"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="109,176,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="145" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" TabIndex="6"/>
-        <Label Content="Estado" HorizontalAlignment="Left" Margin="10,205,0,0" VerticalAlignment="Top" Height="22" Width="94" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-        <ComboBox HorizontalAlignment="Left" Margin="109,204,0,0" VerticalAlignment="Top" Width="145" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="6,3,5,3" TabIndex="7"/>
-        <CheckBox Content="Generar Recibo de Entrega" HorizontalAlignment="Left" Margin="10,243,0,0" VerticalAlignment="Top" TabIndex="8"/>
-        <CheckBox Content="Agregar comentario a la accion" HorizontalAlignment="Left" Margin="10,263,0,0" VerticalAlignment="Top" TabIndex="9"/>
-        <TextBox HorizontalAlignment="Left" Height="72" Margin="10,283,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="244" MaxLength="120" MaxLines="2" TabIndex="10" IsEnabled="False"/>
+        <Label Content="Numero de Pedido" HorizontalAlignment="Left" Margin="10,37,0,0" VerticalAlignment="Top" Height="23" Width="105" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="120,37,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="145" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontWeight="Bold" TabIndex="1" FontSize="14"/>
+        <Label Content="Articulo" HorizontalAlignment="Left" Margin="10,65,0,0" VerticalAlignment="Top" Height="23" Width="105" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="120,65,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="145" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" TabIndex="2"/>
+        <Label Content="Modelo" HorizontalAlignment="Left" Margin="10,94,0,0" VerticalAlignment="Top" Height="22" Width="105" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+        <ComboBox HorizontalAlignment="Left" Margin="120,94,0,0" VerticalAlignment="Top" Width="145" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="6,3,5,3" TabIndex="3"/>
+        <Label Content="Producto" HorizontalAlignment="Left" Margin="10,121,0,0" VerticalAlignment="Top" Height="22" Width="105" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+        <ComboBox HorizontalAlignment="Left" Margin="120,121,0,0" VerticalAlignment="Top" Width="145" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="6,3,5,3" TabIndex="4"/>
+        <Label Content="Cantidad" HorizontalAlignment="Left" Margin="10,149,0,0" VerticalAlignment="Top" Height="23" Width="105" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="120,148,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="145" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" TabIndex="5"/>
+        <Label Content="Numero Original" HorizontalAlignment="Left" Margin="10,177,0,0" VerticalAlignment="Top" Height="23" Padding="0" HorizontalContentAlignment="Center" Width="105" VerticalContentAlignment="Center"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="120,176,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="145" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" TabIndex="6"/>
+        <Label Content="Estado" HorizontalAlignment="Left" Margin="10,205,0,0" VerticalAlignment="Top" Height="22" Width="105" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+        <ComboBox HorizontalAlignment="Left" Margin="120,204,0,0" VerticalAlignment="Top" Width="145" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="6,3,5,3" TabIndex="7"/>
+        <CheckBox Content="Agregar comentario a la accion" HorizontalAlignment="Left" Margin="10,242,0,0" VerticalAlignment="Top" TabIndex="9"/>
+        <TextBox HorizontalAlignment="Left" Height="72" Margin="10,262,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="244" MaxLength="120" MaxLines="2" TabIndex="10" IsEnabled="False"/>
         <!---->
-        <Label Content="-425- SCHNEIDER NICOLAS" Margin="259,10,160,0" VerticalAlignment="Top" Padding="5,0,5,1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="22" BorderBrush="#FF707070" BorderThickness="1" FontSize="10" Background="{DynamicResource {x:Static SystemColors.GradientInactiveCaptionBrushKey}}"/>
-        <DataGrid Name="DataGridPedidos" ItemsSource="{Binding PedidosViewList}" SelectedItem="{Binding CurrentPedido}" EnableColumnVirtualization="True" CanUserAddRows="False" CanUserDeleteRows="False" CanUserReorderColumns="False" CanUserResizeColumns="False" CanUserResizeRows="False" CanUserSortColumns="False" Margin="259,37,10,10" ColumnWidth="*" AutoGenerateColumns="False" IsReadOnly="True" SelectionMode="Single" EnableRowVirtualization="True" FontFamily="Consolas" FontWeight="Bold" FontSize="14">
+        <Label Content="-425- SCHNEIDER NICOLAS" Margin="270,10,160,0" VerticalAlignment="Top" Padding="5,0,5,1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="22" BorderBrush="#FF707070" BorderThickness="1" FontSize="10" Background="{DynamicResource {x:Static SystemColors.GradientInactiveCaptionBrushKey}}"/>
+        <DataGrid Name="DataGridPedidos" ItemsSource="{Binding PedidosViewList}" EnableColumnVirtualization="True" CanUserAddRows="False" CanUserDeleteRows="False" CanUserReorderColumns="False" CanUserResizeColumns="False" CanUserResizeRows="False" CanUserSortColumns="False" Margin="270,37,10,10" ColumnWidth="*" AutoGenerateColumns="False" IsReadOnly="True" SelectionMode="Single" EnableRowVirtualization="True" FontFamily="Consolas" FontWeight="Bold" FontSize="14">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Pedido" Binding="{Binding NumeroPedido}" />
                 <DataGridTextColumn Header="Modelo" Binding="{Binding NombreModelo}"/>
@@ -42,30 +41,18 @@
                 <DataGridTextColumn Header="Estado" Binding="{Binding EstadoPedido}"/>
                 <DataGridTextColumn Header="Fecha Estado" Binding="{Binding FechaEstado}"/>
                 <DataGridTextColumn Header="Reproceso" Binding="{Binding NumeroReproceso}"/>
-                <!--<DataGridTemplateColumn>
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                                <Button Content="Registro" HorizontalAlignment="Stretch"/>
-                            </StackPanel>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>-->
             </DataGrid.Columns>
         </DataGrid>
         <ComboBox Margin="0,10,10,0" VerticalAlignment="Top" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="6,3,5,3" HorizontalAlignment="Right" Width="145" TabIndex="14"/>
         <!---->
-        <Button Content="GUARDAR" HorizontalAlignment="Left" Margin="10,360,0,0" Width="244" Height="22" VerticalAlignment="Top" TabIndex="11"/>
-        <Button Content="NUEVO" HorizontalAlignment="Left" Margin="10,387,0,0" Width="244" Height="22" VerticalAlignment="Top" TabIndex="11"/>
-    <DockPanel Height="22" VerticalAlignment="Top" HorizontalAlignment="Left" Width="244" Margin="10,10,0,0">
+        <Button Content="GUARDAR" HorizontalAlignment="Left" Margin="10,339,0,0" Width="244" Height="22" VerticalAlignment="Top" TabIndex="11"/>
+        <Button Content="NUEVO" HorizontalAlignment="Left" Margin="10,366,0,0" Width="244" Height="22" VerticalAlignment="Top" TabIndex="11"/>
+    <DockPanel Height="22" VerticalAlignment="Top" HorizontalAlignment="Left" Width="255" Margin="10,10,0,0">
         <Menu DockPanel.Dock="Top" BorderBrush="#FF707070" BorderThickness="1">
-            <MenuItem Header="Acciones">
-                <MenuItem Header="Nuevo" />
-                <MenuItem Header="Guardar" />
+            <MenuItem Header="Pedido" >
                 <MenuItem Header="Buscar" />
-                <MenuItem Header="Detalles" />
-                <Separator />
-                <MenuItem Header="Salir" />
+                <MenuItem Header="Ver Movimientos" />
+                <MenuItem Header="Generar Recibo" />
             </MenuItem>
             <MenuItem Header="Usuario">
                 <MenuItem Header="Cerrar Sesion" />
